# g1

./: Cargo.toml
assets/: char.gltf  default.world.ron  player.anim.ron  player.basic.anim.ron
crates/animation/: Cargo.toml
crates/animation/src/: animator.rs  basic_controller.rs  controller.rs  lib.rs
crates/assets/: cargo.toml
crates/assets/src/: lib.rs
crates/audio/: cargo.toml
crates/audio/src/: effects.rs  jukebox.rs  lib.rs  music.rs  processed.rs
crates/custom-derive/: cargo.toml
crates/custom-derive/src/: lib.rs
crates/input/: cargo.toml
crates/render/: cargo.toml
crates/simulation/: cargo.toml
crates/simulation/src/: lib.rs  movement.rs  terrain.rs
crates/simulation/src/terrain/: mod.rs
crates/simulation/src/worldgen/: asset.rs  component.rs  layout.rs  mod.rs  resource.rs  system.rs  terrain.rs
crates/utils/: cargo.toml
crates/utils/src/: fps.rs  lib.rs
src/: animation.rs  camera.rs  creature.rs  debug.rs  main.rs  player.rs  scene.rs
