[package]
name = "bevy-jam-4"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = { version = "0.24", optional = true }
utils = { path = "crates/utils", version = "0.1.0" }
simulation = { path = "crates/simulation", version = "0.1.0" }
render = { path = "crates/render", version = "0.1.0" }
input = { path = "crates/input", version = "0.1.0" }
audio = { path = "crates/audio", version = "0.1.0" }




[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy = { version = "0.12"}

[features]
hotreload = ["bevy/file_watcher"]
debug = ["bevy_egui"]